Fri Feb 15 18:24:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#try_run): bail out explicitly if cross
	  compiling, because it cannot work of course.

Fri Feb 15 12:34:58 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: test struct sockaddr_storage directly.

	* ext/socket/rubysocket.h: use HAVE_TYPE_STRUCT_SOCKADDR_STORAGE.

Fri Feb 15 12:26:13 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/getaddrinfo.c (GET_AI): don't cast 1st argument for
	  INIT_SOCKADDR.

Fri Feb 15 08:12:11 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/sockport.h (SET_SS_LEN): removed.
	  (SET_SIN_LEN): removed.
	  (INIT_SOCKADDR): new macro.

	* ext/socket/ancdata.c (extract_ipv6_pktinfo): use INIT_SOCKADDR.

	* ext/socket/raddrinfo.c (make_inetaddr): use INIT_SOCKADDR.
	  (addrinfo_ipv6_to_ipv4): ditto.

	* ext/socket/getaddrinfo.c (GET_AI): use INIT_SOCKADDR.

Fri Feb 15 07:49:27 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc.rb:  Update to release version of 4.0.0

	* lib/rubygems.rb:  Update to release version of 2.0.0

Fri Feb 15 07:07:27 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/sockport.h (SA_LEN): removed because unused now.
	  (SS_LEN): ditto.
	  (SIN_LEN): ditto.

Thu Feb 14 10:45:31 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_process.rb (test_setsid): Added a workaround for
	  MacOS X. Patch by nagachika. [Bug #7826] [ruby-core:52126]

Fri Feb 15 00:15:31 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/sockport.h (VALIDATE_SOCKLEN): new macro to validate
	  sa_len member of 4.4BSD socket address.

	* ext/socket/getnameinfo.c (getnameinfo): use VALIDATE_SOCKLEN,
	  instead of SA_LEN.

	* ext/socket/socket.c (sock_s_getnameinfo): use VALIDATE_SOCKLEN
	  instead of SS_LEN. 

Thu Feb 14 22:25:54 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (sockaddr_len): extracted from sockaddr_obj.
	  (sockaddr_obj): add an argument to length of socket address.